sandbox/output
StockProfit.cpp:61:58: error: comparison of integers of different signs: 'unsigned int' and 'int' [-Werror,-Wsign-compare]
                        for (unsigned int i = buy + 1; i < sell; ++i) {
                                                       ~ ^ ~~~~
1 error generated.
make: *** [test] Error 1
